--- a/paper/references/ref.bib
+++ b/paper/references/ref.bib
@@ -154,3 +154,14 @@
 	year={1997},
 	publisher={IEEE}
 }
+
+@article{taddy2013multinomial,
+	title={Multinomial inverse regression for text analysis},
+	author={Taddy, Matt},
+	journal={Journal of the American Statistical Association},
+	volume={108},
+	number={503},
+	pages={755--770},
+	year={2013},
+	publisher={Taylor \& Francis}
+}
