fix syntax on paper and presentation. update code to (hopefully) run on server

--- a/paper/News-Classification.tex
+++ b/paper/News-Classification.tex
@@ -93,7 +93,7 @@
 	    Finally, each news source shows a difference in the average article length. To overcome this, I limited the article length to a maximum of the first 500 words to ensure that no single source was consistently shorter when fed into the neural network. 
 	    
 	    \subsection{Statistical Analysis}
-	    To get additional context about the contents of the data, I perform a statistical analysis of the data to see what words are most related to the various sources. In particular, \citet{taddy2013multinomial} introduced a framework for using high-dimensional text data in statistical analysis. While I leave the technical details to the paper itself, the intuition is as follows. Suppose we have $N$ documents, each containing some text $x_i$, and a corpus vocabulary that has $p$ distinct tokens. Further, assume that each text document is related to an underlying sentiment $s_i$, whereby the sentiment is influential in creating the text.\footnote{More specifically, imagine that text is generated in accordance with some probability distribution function $g(x_i | s_i)$ as opposed to the sentiment itself being generated, i.e. $f(s_i | x_i)$. The following examples highlight the intuitive differences. One can imagine that saying the phrase ``Country music is fantastic'' is unlikely to \textit{cause} someone to suddenly like country music -- rather, we would suspect that someone who already likes country music would be more likely to say those words. Conversely, if someone makes an offensive comment about a family member, it may cause you to get angry and hit them, not vice versa.} Since the size of the vocabulary, $p$, can often take values on the order of magnitude 10,000 or more, the simple regression of outcome variable $Y$ on text $X$ (i.e. $Y= \beta X$) will not provide an efficient estimate. What the paper proposed is a method for projecting a document with dimensions $p \times 1$ into a single variable $z_i$ that still preserves information about the sentiment. This technique is useful in part because the first stage multinomial inverse regression allows us to see, pairwise, what phrases are most associated with which source. 
+	    To get additional context about the contents of the data, I perform a statistical analysis of the data to see what words are most related to the various sources. In particular, \citet{taddy2013multinomial} introduced a framework for using high-dimensional text data in statistical analysis. While I leave the technical details to the paper itself, the intuition is as follows. Suppose we have $N$ documents, each containing some text $x_i$, and a corpus vocabulary that has $p$ distinct tokens. Further, assume that each text document is related to an underlying sentiment $s_i$, whereby the sentiment is influential in creating the text.\footnote{More specifically, imagine that text is generated in accordance with some probability distribution function $g(x_i | s_i)$ as opposed to the sentiment itself being generated, i.e. $f(s_i | x_i)$. The following examples highlight the intuitive differences. One can imagine that saying the phrase ``Country music is fantastic'' is unlikely to \textit{cause} someone to suddenly like country music -- rather, we would suspect that someone who already likes country music would be more likely to say those words. Conversely, if someone makes an offensive comment about a family member, it may cause you to get angry and hit them, not vice versa.} Since the size of the vocabulary, $p$, can often take values on the order of magnitude 10,000 or more, the simple regression of outcome variable $Y$ on text $X$ (i.e. $Y= \beta X$) will not provide an efficient estimate. What the paper proposed is a method for projecting a document with dimensions $p \times 1$ into a single variable $z_i$ that still preserves information about the sentiment. This technique is useful in part because the first stage multinomial inverse regression allows us to see, pairwise, what phrases are most associated with which source. The following tables below show the results of this first stage multinomial inverse regression. 
 	    
 	    \input{figures/vox_pbs_contributions.tex}
 	    \input{figures/pbs_fox_contributions.tex}
@@ -169,7 +169,7 @@
 	
 	\begin{figure}[H]
 		\includegraphics[width=\textwidth]{figures/images/web-form.png}
-		\caption{The web app;s home page.}
+		\caption{The web app's home page.}
 		\label{fig:form}
 	\end{figure}
 
