--- a/paper/figures/pbs_fox_contributions.tex
+++ b/paper/figures/pbs_fox_contributions.tex
@@ -4,8 +4,8 @@
 \caption{Phrases that are indicitave of either PBS or Fox News.}
 \label{tab:pbs_fox}
 \centering
-\begin{tabular}{rlr|lr}
-  \hline
+\begin{tabular}{r||lr|lr}
+  \hline \hline
   &             &        &             &        \\
  & \textit{PBS} &  & \textit{FOX} & \\ 
   \hline
