--- a/paper/figures/vox_pbs_contributions.tex
+++ b/paper/figures/vox_pbs_contributions.tex
@@ -4,8 +4,8 @@
 \caption{Phrases that are indicitave of either Vox or PBS News.}
 \label{tab:vox_pbs}
 \centering
-\begin{tabular}{rlr|lr}
-  \hline
+\begin{tabular}{r||lr|lr}
+  \hline \hline
   &             &        &          &        \\
  & \textit{VOX} &  & \textit{PBS} &  \\ 
   \hline
