--- a/presentation/final_presentation.tex
+++ b/presentation/final_presentation.tex
@@ -51,7 +51,7 @@
 		\frametitle{Literature Review: Computer Science}
 		\begin{itemize}
 			\item The LSTM architecture was introduced in \citet{hochreiter1997long}. 
-			\item More recently, \citet{gers2000recurrent}, \citet{chung2014empirical}, and \citet{yao2015depth} introduce variations on the baseline \citet{hochreiter1997long} LSTM model, 
+			\item More recently, \citet{gers2000recurrent}, \citet{chung2014empirical}, and \citet{yao2015depth} introduce variations. 
 			\item \citet{greff2016lstm} show them all to be roughly equivalent. 
 			\item \citet{schuster1997bidirectional} introduced the first bidirectional RNN. 
 			\item Together, bidirectional LSTM architectures prove to be among the most accurate models for language tasks, consistent with \citet{wang2015unified}. 
