--- a/paper/figures/vox_fox_contributions.tex
+++ b/paper/figures/vox_fox_contributions.tex
@@ -4,8 +4,8 @@
 \caption{Phrases that are indicitave of either Vox or Fox News.}
 \label{tab:vox_fox}
 \centering
-\begin{tabular}{rlr|lr}
-  \hline
+\begin{tabular}{r||lr|lr}
+  \hline \hline
   &        &        &         &        \\
  & \textit{VOX} &  & \textit{FOX} &  \\ 
   \hline
